data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2067.wast
;; 8. **Test Description:** Use a `block` with an immediate branching to `loop`, where the loop condition is always false due to incorrect block stack management.     - **Constraint Checked:** Verifies correct management of block stack and handling of immediate branches.     - **Infinite Loop Relation:** Mismanagement can cause failure to exit `loop`, resulting in an infinite loop.

(assert_invalid
  (module
    (func $block-loop-management (result i32)
      (block (result i32)
        (loop (result i32) (br_if 0 (i32.const 0)(i32.const 1)))
        (i32.const 2)
      )
    )
  )
  "type mismatch"
)